force-app/main/default/objects/life__c/life__c.object-meta.xml
<CustomObject>
    <label>life</label>
    <nameField>
        <displayFormat>s-{0}</displayFormat>
        <label>name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>lives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>