force-app/main/default/objects/life__c/fields/donation__c.field-meta.xml
<CustomField>
    <fullName>donation__c</fullName>
    <label>donation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>