force-app/main/default/objects/life__c/fields/funding_code__c.field-meta.xml
<CustomField>
    <fullName>funding_code__c</fullName>
    <label>funding code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>