force-app/main/default/objects/life__c/fields/num_meals__c.field-meta.xml
<CustomField>
    <fullName>num_meals__c</fullName>
    <label>num meals</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>